Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18196

CMake server mode project view does not detect build directory below source directory properly

XMLWordPrintable

      The new cmake project view normally has sections under each target called <Source Directory> and <Build Directory>. If your build directory is under your source directory you only have <Source Directory>, with an extra entry under that that's the full path to your build directory.

        For Gerrit Dashboard: QTCREATORBUG-18196
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            patstew Patrick Stewart
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes